--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ libc = "0.2"
 log = "0.4"
 simplelog = "0.12"
 ctrlc = "3.4"
+rusqlite = "0.31"
+bincode = "1.3"
+serde = { version = "1.0", features = ["derive"] }
