--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ ctrlc = "3.4"
 rusqlite = "0.31"
 bincode = "1.3"
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+prettytable-rs = "0.10"
