--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ ctrlc = "3.4"
 rusqlite = "0.31"
 bincode = "1.3"
 serde = { version = "1.0", features = ["derive"] }
+filetime = "0.2.25"
 
 [dev-dependencies]
 prettytable-rs = "0.10"
