--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ rusqlite = "0.31"
 bincode = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 filetime = "0.2.25"
+clap = { version = "4.5", features = ["derive"] }
 
 [dev-dependencies]
 prettytable-rs = "0.10"
