--- a/packages/harness/package.json
+++ b/packages/harness/package.json
@@ -9,8 +9,10 @@
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250504.0",
-    "typescript": "^5.8.3",
     "wrangler": "^4.14.1"
+  },
+  "dependencies": {
+    "dofs": "workspace:*",
+    "hono": "^4.7.8"
   }
 }
