--- a/packages/harness/package.json
+++ b/packages/harness/package.json
@@ -9,10 +9,8 @@
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
-    "wrangler": "^4.14.1"
-  },
-  "dependencies": {
     "dofs": "workspace:*",
     "hono": "^4.7.8"
-  }
+  },
+  "packageManager": "bun@1.1.13"
 }
