--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prettier-plugin-organize-imports": "^4.1.0",
     "tsup": "^8.4.0",
     "typescript": "^5.8.3",
-    "wrangler": "^4.14.1"
+    "wrangler": "https://prerelease-registry.devprod.cloudflare.dev/workers-sdk/runs/14180338760/npm-package-wrangler-8740"
   },
   "packageManager": "bun@1.1.13"
 }
