--- a/packages/harness/wrangler.jsonc
+++ b/packages/harness/wrangler.jsonc
@@ -51,12 +51,12 @@
    * Static Assets
    * https://developers.cloudflare.com/workers/static-assets/binding/
    */
-  "assets": {
-    "directory": "./public/",
-    "binding": "ASSETS",
-    "not_found_handling": "single-page-application",
-    "run_worker_first": true,
-  },
+  // "assets": {
+  //   "directory": "./public/",
+  //   "binding": "ASSETS",
+  //   "not_found_handling": "single-page-application",
+  //   "run_worker_first": true,
+  // },
 
   /**
    * Service Bindings (communicate between multiple Workers)
