rename watch script to dev and add peerDependencies

--- a/packages/dofs/package.json
+++ b/packages/dofs/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "cf-typegen": "wrangler types",
     "build": "tsup",
-    "watch": "tsup --watch"
+    "dev": "tsup --watch"
   },
   "main": "./dist/Fs.mjs",
   "module": "./dist/Fs.mjs",
