mark dterm package as private

--- a/packages/dterm/package.json
+++ b/packages/dterm/package.json
@@ -6,6 +6,7 @@
     "name": "Ben Allfree",
     "url": "https://x.com/benallfree"
   },
+  "private": true,
   "license": "MIT",
   "repository": {
     "type": "git",
