--- a/packages/dterm/example/package.json
+++ b/packages/dterm/example/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.2.2",
+    "@xterm/addon-fit": "^0.10.0",
     "dofs": "workspace:*",
     "dofs-term": "workspace:*",
     "hono": "^4.7.8",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "wrangler": "^4.19.1"
   },
   "packageManager": "bun@1.1.13"
 }
