--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   },
   "workspaces": [
     "packages/*",
-    "packages/dterm/example"
+    "packages/dofs/example"
   ],
   "devDependencies": {
     "@changesets/cli": "^2.29.4",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "tsup": "^8.4.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "wrangler": "https://prerelease-registry.devprod.cloudflare.dev/workers-sdk/runs/14180338760/npm-package-wrangler-8740"
+    "wrangler": "^4.19.1"
   }
 }
