--- a/packages/dofs/example/wrangler.jsonc
+++ b/packages/dofs/example/wrangler.jsonc
@@ -3,40 +3,55 @@
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
-  "$schema": "../../node_modules/wrangler/config-schema.json",
+  "$schema": "../../../node_modules/wrangler/config-schema.json",
   "name": "dofs",
   "main": "src/index.ts",
   "compatibility_date": "2025-05-04",
   "migrations": [
     {
       "new_sqlite_classes": ["MyDurableObject"],
-      "tag": "v1",
+      "tag": "v1"
     },
+    {
+      "renamed_classes": [
+        {
+          "from": "MyDurableObject",
+          "to": "MyDurableObject1"
+        }
+      ],
+      "tag": "v2"
+    },
+    {
+      "new_sqlite_classes": ["MyDurableObject2"],
+      "tag": "v3"
+    }
   ],
   "durable_objects": {
     "bindings": [
       {
         "class_name": "MyDurableObject",
-        "name": "MY_DURABLE_OBJECT",
+        "name": "MY_DURABLE_OBJECT"
       },
-    ],
+      {
+        "class_name": "MyDurableObject1",
+        "name": "MY_DURABLE_OBJECT_1"
+      }
+    ]
   },
   "observability": {
-    "enabled": true,
-  },
+    "enabled": true
+  }
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
    */
   // "placement": { "mode": "smart" },
-
   /**
    * Bindings
    * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
    * databases, object storage, AI inference, real-time communication and more.
    * https://developers.cloudflare.com/workers/runtime-apis/bindings/
    */
-
   /**
    * Environment Variables
    * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
@@ -46,7 +61,6 @@
    * Note: Use secrets to store sensitive data.
    * https://developers.cloudflare.com/workers/configuration/secrets/
    */
-
   /**
    * Static Assets
    * https://developers.cloudflare.com/workers/static-assets/binding/
@@ -57,7 +71,6 @@
   //   "not_found_handling": "single-page-application",
   //   "run_worker_first": true,
   // },
-
   /**
    * Service Bindings (communicate between multiple Workers)
    * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
