--- a/packages/dterm/wrangler.jsonc
+++ b/packages/dterm/wrangler.jsonc
@@ -10,19 +10,19 @@
   "migrations": [
     {
       "new_sqlite_classes": ["MyDurableObject"],
-      "tag": "v1",
-    },
+      "tag": "v1"
+    }
   ],
   "durable_objects": {
     "bindings": [
       {
         "class_name": "MyDurableObject",
-        "name": "MY_DURABLE_OBJECT",
-      },
-    ],
+        "name": "MY_DURABLE_OBJECT"
+      }
+    ]
   },
   "observability": {
-    "enabled": true,
+    "enabled": true
   },
   /**
    * Smart Placement
@@ -55,8 +55,8 @@
     "directory": "./public/",
     "binding": "ASSETS",
     "not_found_handling": "single-page-application",
-    "run_worker_first": true,
-  },
+    "run_worker_first": true
+  }
 
   /**
    * Service Bindings (communicate between multiple Workers)
