--- a/package.json
+++ b/package.json
@@ -14,6 +14,17 @@
     "semi": false,
     "plugins": [
       "prettier-plugin-organize-imports"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "*.jsonc"
+        ],
+        "options": {
+          "parser": "jsonc-parser",
+          "trailingComma": "none"
+        }
+      }
     ]
   },
   "workspaces": [
