--- a/packages/dofs/example/wrangler.jsonc
+++ b/packages/dofs/example/wrangler.jsonc
@@ -10,37 +10,37 @@
   "migrations": [
     {
       "new_sqlite_classes": ["MyDurableObject"],
-      "tag": "v1"
+      "tag": "v1",
     },
     {
       "renamed_classes": [
         {
           "from": "MyDurableObject",
-          "to": "MyDurableObject1"
-        }
+          "to": "MyDurableObject1",
+        },
       ],
-      "tag": "v2"
+      "tag": "v2",
     },
     {
       "new_sqlite_classes": ["MyDurableObject2"],
-      "tag": "v3"
-    }
+      "tag": "v3",
+    },
   ],
   "durable_objects": {
     "bindings": [
       {
-        "class_name": "MyDurableObject",
-        "name": "MY_DURABLE_OBJECT"
+        "class_name": "MyDurableObject1",
+        "name": "MY_DURABLE_OBJECT",
       },
       {
-        "class_name": "MyDurableObject1",
-        "name": "MY_DURABLE_OBJECT_1"
-      }
-    ]
+        "class_name": "MyDurableObject2",
+        "name": "MY_DURABLE_OBJECT_1",
+      },
+    ],
   },
   "observability": {
-    "enabled": true
-  }
+    "enabled": true,
+  },
   /**
    * Smart Placement
    * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
