--- a/packages/dofs/example/wrangler.jsonc
+++ b/packages/dofs/example/wrangler.jsonc
@@ -3,21 +3,25 @@
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
-  "$schema": "../../node_modules/wrangler/config-schema.json",
+  "$schema": "../../../node_modules/wrangler/config-schema.json",
   "name": "dofs",
   "main": "src/index.ts",
   "compatibility_date": "2025-05-04",
   "migrations": [
     {
-      "new_sqlite_classes": ["MyDurableObject"],
+      "new_sqlite_classes": ["MyDurableObjectWithDofsMixin", "MyDurableObjectWithDofsAttribute"],
       "tag": "v1",
     },
   ],
   "durable_objects": {
     "bindings": [
       {
-        "class_name": "MyDurableObject",
-        "name": "MY_DURABLE_OBJECT",
+        "class_name": "MyDurableObjectWithDofsMixin",
+        "name": "MY_DURABLE_OBJECT_WITH_DOFS_MIXIN",
+      },
+      {
+        "class_name": "MyDurableObjectWithDofsAttribute",
+        "name": "MY_DURABLE_OBJECT_WITH_DOFS_ATTRIBUTE",
       },
     ],
   },
